Intermittent image/test/reftest/downscaling/downscale-moz-icon-1.html == image/test/reftest/downscaling/downscale-moz-icon-1-ref.html | crash-check | This test left crash dumps behind, but we weren't expecting it to!
Categories
(Core :: Graphics: ImageLib, defect, P5)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr60 | --- | unaffected |
| firefox67 | --- | unaffected |
| firefox68 | --- | unaffected |
| firefox69 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: tnikkel)
References
(Regression)
Details
(Keywords: crash, intermittent-failure, regression)
Attachments
(1 file)
Filed by: aiakab [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer.html#?job_id=249664881&repo=autoland
Full log: https://queue.taskcluster.net/v1/task/E3HU91TBQS6P0taObIHj-Q/runs/0/artifacts/public/logs/live_backing.log
Reftest URL: https://hg.mozilla.org/mozilla-central/raw-file/tip/layout/tools/reftest/reftest-analyzer.xhtml#logurl=https://queue.taskcluster.net/v1/task/E3HU91TBQS6P0taObIHj-Q/runs/0/artifacts/public/logs/live_backing.log&only_show_unexpected=1
09:43:36 INFO - REFTEST TEST-START | file:///Z:/task_1559549016/build/tests/reftest/tests/image/test/reftest/downscaling/downscale-moz-icon-1.html == file:///Z:/task_1559549016/build/tests/reftest/tests/image/test/reftest/downscaling/downscale-moz-icon-1-ref.html
09:43:36 INFO - REFTEST TEST-LOAD | file:///Z:/task_1559549016/build/tests/reftest/tests/image/test/reftest/downscaling/downscale-moz-icon-1.html | 47 / 136 (34%)
09:43:36 INFO - REFTEST TEST-UNEXPECTED-FAIL | file:///Z:/task_1559549016/build/tests/reftest/tests/image/test/reftest/downscaling/downscale-moz-icon-1.html == file:///Z:/task_1559549016/build/tests/reftest/tests/image/test/reftest/downscaling/downscale-moz-icon-1-ref.html | crash-check | This test left crash dumps behind, but we weren't expecting it to!
09:43:36 INFO - REFTEST INFO | Found unexpected crash dump file C:\Users\task_1559549016\AppData\Local\Temp\tmpgxpcre.mozrunner\minidumps\4d821854-8d94-425a-9f67-08b78670d610.dmp
09:43:36 INFO - REFTEST TEST-LOAD | file:///Z:/task_1559549016/build/tests/reftest/tests/image/test/reftest/downscaling/downscale-moz-icon-1-ref.html | 47 / 136 (34%)
09:43:36 ERROR - A content process crashed and MOZ_CRASHREPORTER_SHUTDOWN is set, shutting down
09:43:36 INFO - [Parent 3080, Gecko_IOThread] WARNING: file z:/task_1559542658/build/src/ipc/chromium/src/base/process_util_win.cc, line 160
09:43:36 INFO - [Child 4688, Chrome_ChildThread] WARNING: pipe error: 109: file z:/task_1559542658/build/src/ipc/chromium/src/chrome/common/ipc_channel_win.cc, line 341
09:43:36 INFO - JavaScript erro[r: reCsource://rheftest/reftest.jsm, line 1558: NS_ERROR_NOT_AVAILABLE: Component returned failure code: 0x80040111 (NS_ERROR_NOT_AVAILABLE) [nsIPropertyBag2.getPropertyAsAString]
09:43:36 INFO - !!! error running onStopped callback: TypeError: callback is not a function
09:43:37 INFO - i[Child 3372, Chrome_ChildThread] WARNING: pipe error: 109: file z:/task_1559542658/build/src/ipc/chromium/src/chrome/common/ipc_channel_win.cc, line 341
09:43:37 INFO - [Child 3372, Chrome_ChildThread] WJavaScript error: resource://reftest/reftest.jsm, line 1558: NS_ERROR_NOT_AVAILABLE: Component returned failure code: 0x80040111 (NS_ERROR_NOT_AVAILABLE) [nsIPropertyBag2.getPropertyAsAString]
09:43:37 INFO - [Parent 3080, Gecko_IOThread] WARNING: pipe error: 109: file z:/task_1559542658/build/src/ipc/chromium/src/chrome/common/ipc_channel_win.cc, line 341
09:43:37 INFO - [Child 6088, Chrome_ChildThread] WARNING: pipe error: 109: file z:/task_1559542658/build/src/ipc/chromium/src/chrome/common/ipc_channel_win.cc, line 341
09:43:37 INFO - [Child 6088, Chrome_ChildThread] WARNING: pipe error: 109: file z:/task_1559542658/build/src/ipc/chromium/src/chrome/common/iJavaScript error: resource://reftest/reftest.jsm, line 1558: NS_ERROR_NOT_AVAILABLE: Component returned failure code: 0x80040111 (NS_ERROR_NOT_AVAILABLE) [nsIPropertyBag2.getPropertyAsAString]
09:43:37 INFO - 1559555017183 Marionette TRACE Received observer notification xpcom-will-shutdown
09:43:37 INFO - 1559555017184 Marionette INFO Stopped listening on port 2828
09:43:37 INFO - 1559555017184 Marionette DEBUG Remote service is inactive
09:43:37 INFO - REFTEST INFO | Downloading symbols from: https://queue.taskcluster.net/v1/task/E0bpRY6UTheQdvMc0kLUHA/artifacts/public/build/target.crashreporter-symbols.zip
09:43:42 INFO - REFTEST INFO | Copy/paste: Z:\task_1559549016\build\win32-minidump_stackwalk.exe c:\users\task_1559549016\appdata\local\temp\tmpgxpcre.mozrunner\minidumps\4d821854-8d94-425a-9f67-08b78670d610.dmp c:\users\task_1559549016\appdata\local\temp\tmpto7o9v
09:43:59 INFO - REFTEST INFO | Saved minidump as Z:\task_1559549016\build\blobber_upload_dir\4d821854-8d94-425a-9f67-08b78670d610.dmp
09:43:59 INFO - REFTEST INFO | Saved app info as Z:\task_1559549016\build\blobber_upload_dir\4d821854-8d94-425a-9f67-08b78670d610.extra
09:43:59 INFO - REFTEST PROCESS-CRASH | file:///Z:/task_1559549016/build/tests/reftest/tests/image/test/reftest/downscaling/downscale-moz-icon-1.html | application crashed [@ mozilla::ipc::MessageChannel::CxxStackFrame::CxxStackFrame(mozilla::ipc::MessageChannel &,mozilla::ipc::Direction,IPC::Message const *)]
09:43:59 INFO - Crash dump filename: c:\users\task_1559549016\appdata\local\temp\tmpgxpcre.mozrunner\minidumps\4d821854-8d94-425a-9f67-08b78670d610.dmp
09:43:59 INFO - Operating system: Windows NT
09:43:59 INFO - 6.1.7601 Service Pack 1
09:43:59 INFO - CPU: x86
09:43:59 INFO - GenuineIntel family 6 model 45 stepping 7
09:43:59 INFO - 8 CPUs
09:43:59 INFO -
09:43:59 INFO - GPU: UNKNOWN
09:43:59 INFO -
09:43:59 INFO - Crash reason: EXCEPTION_BREAKPOINT
09:43:59 INFO - Crash address: 0x57892c1d
09:43:59 INFO - Assertion: Unknown assertion type 0x00000000
09:43:59 INFO - Process uptime: 7 seconds
09:43:59 INFO -
09:43:59 INFO - Thread 22 (crashed)
| Assignee | ||
Comment 1•6 years ago
|
||
Stack
09:43:59 INFO - Thread 22 (crashed)
09:43:59 INFO - 0 xul.dll!mozilla::ipc::MessageChannel::CxxStackFrame::CxxStackFrame(mozilla::ipc::MessageChannel &,mozilla::ipc::Direction,IPC::Message const *) [MessageChannel.cpp:abf29aea4d1edd7cc377f18d1b25149b020bcabf : 225 + 0x10]
09:43:59 INFO - eip = 0x57892c1d esp = 0x0703f4e8 ebp = 0x0703f4fc ebx = 0x00befa80
09:43:59 INFO - esi = 0x0703f53c edi = 0x00b37040 eax = 0x71ceaa58 ecx = 0x00000220
09:43:59 INFO - edx = 0x5c2db62c efl = 0x00000287
09:43:59 INFO - Found by: given as instruction pointer in context
09:43:59 INFO - 1 xul.dll!mozilla::ipc::MessageChannel::Send(IPC::Message *) [MessageChannel.cpp:abf29aea4d1edd7cc377f18d1b25149b020bcabf : 980 + 0x14]
09:43:59 INFO - eip = 0x57892749 esp = 0x0703f504 ebp = 0x0703f570 ebx = 0x00befa80
09:43:59 INFO - esi = 0x00b6c120 edi = 0x0ba83420
09:43:59 INFO - Found by: call frame info
09:43:59 INFO - 2 xul.dll!mozilla::net::PNeckoChild::SendRemoveRequestContext(unsigned __int64 const &) [PNeckoChild.cpp: : 1933 + 0x8]
09:43:59 INFO - eip = 0x5942fc6f esp = 0x0703f578 ebp = 0x0703f594 ebx = 0x00befa80
09:43:59 INFO - esi = 0x00b761e0 edi = 0x0ba83420
09:43:59 INFO - Found by: call frame info
09:43:59 INFO - 3 xul.dll!mozilla::net::RequestContextService::RemoveRequestContext(unsigned __int64) [RequestContextService.cpp:abf29aea4d1edd7cc377f18d1b25149b020bcabf : 562 + 0xa]
09:43:59 INFO - eip = 0x57b4673f esp = 0x0703f59c ebp = 0x0703f5c4 ebx = 0x00b02d00
09:43:59 INFO - esi = 0x00b01c40 edi = 0x00b36d30
09:43:59 INFO - Found by: call frame info
09:43:59 INFO - 4 xul.dll!mozilla::net::nsLoadGroup::~nsLoadGroup() [nsLoadGroup.cpp:abf29aea4d1edd7cc377f18d1b25149b020bcabf : 107 + 0xb]
09:43:59 INFO - eip = 0x57b463b3 esp = 0x0703f5cc ebp = 0x0703f5f4 ebx = 0x00b02d00
09:43:59 INFO - esi = 0x00b01c40 edi = 0x00b36d30
09:43:59 INFO - Found by: call frame info
09:43:59 INFO - 5 xul.dll!void mozilla::net::nsLoadGroup::~nsLoadGroup() [nsLoadGroup.cpp:abf29aea4d1edd7cc377f18d1b25149b020bcabf : 100 + 0x5]
09:43:59 INFO - eip = 0x57b4631b esp = 0x0703f5fc ebp = 0x0703f600 ebx = 0x00b02d00
09:43:59 INFO - esi = 0x00b36d30 edi = 0x0d4c0e00
09:43:59 INFO - Found by: call frame info
09:43:59 INFO - 6 xul.dll!mozilla::net::nsLoadGroup::Release() [nsLoadGroup.cpp:abf29aea4d1edd7cc377f18d1b25149b020bcabf : 116 + 0x7]
09:43:59 INFO - eip = 0x5775ea15 esp = 0x0703f608 ebp = 0x0703f610 esi = 0x00000000
09:43:59 INFO - Found by: call frame info
09:43:59 INFO - 7 xul.dll!void nsIconChannel::~nsIconChannel() [nsIconChannel.cpp:abf29aea4d1edd7cc377f18d1b25149b020bcabf : 166 + 0x75]
09:43:59 INFO - eip = 0x59a659d0 esp = 0x0703f618 ebp = 0x0703f630 esi = 0x0d4d1180
09:43:59 INFO - Found by: call frame info
09:43:59 INFO - 8 xul.dll!static void nsIconChannel::IconAsyncOpenTask::~IconAsyncOpenTask() [nsIconChannel.cpp:abf29aea4d1edd7cc377f18d1b25149b020bcabf : 69 + 0x17]
09:43:59 INFO - eip = 0x59a6719c esp = 0x0703f638 ebp = 0x0703f644 ebx = 0x00000001
09:43:59 INFO - esi = 0x0ba7b7c0 edi = 0x0d4d1180
09:43:59 INFO - Found by: call frame info
09:43:59 INFO - 9 xul.dll!nsThread::ProcessNextEvent(bool,bool *) [nsThread.cpp:abf29aea4d1edd7cc377f18d1b25149b020bcabf : 1223 + 0x2e]
09:43:59 INFO - eip = 0x5774bf3e esp = 0x0703f64c ebp = 0x0703fb1c ebx = 0x00000000
09:43:59 INFO - esi = 0x0703f650 edi = 0x00000000
09:43:59 INFO - Found by: call frame info
09:43:59 INFO - 10 xul.dll!NS_ProcessNextEvent(nsIThread *,bool) [nsThreadUtils.cpp:abf29aea4d1edd7cc377f18d1b25149b020bcabf : 486 + 0x1e]
09:43:59 INFO - eip = 0x5774ace7 esp = 0x0703fb24 ebp = 0x0703fb40 ebx = 0x00bf3200
09:43:59 INFO - esi = 0x00be6d00 edi = 0x00be6e80
09:43:59 INFO - Found by: call frame info
| Assignee | ||
Comment 2•6 years ago
|
||
nsLoadGroup doesn't have thread safe ref counting so I'm guessing it's not supposed to be used off main thread.
~nsIconChannel already has a proxy release for mLoadInfo, which was added in what looks like a try wide change to do exactly that for every channel. Since we didn't have problems before I'm guessing we only released nsIconChannel on the main thread. I'm think I'm just going to restore that instead of make ~nsIconChannel callable off main thread (who knows what else we need to consider for that).
| Assignee | ||
Comment 3•6 years ago
|
||
It will cause releasing nsLoadGroup which doesn't like being released off main thread.
Comment 5•6 years ago
|
||
| bugherder | ||
Updated•6 years ago
|
Updated•6 years ago
|
| Comment hidden (Intermittent Failures Robot) |
Updated•4 years ago
|
Description
•