Bug 1556360. Release nsIconChannel on main thread. r=aosmond

It will cause releasing nsLoadGroup which doesn't like being released off main thread.

Differential Revision: https://phabricator.services.mozilla.com/D33590

--HG--
extra : moz-landing-system : lando